<resources>
    <string
        name="set_default_launcher_prompt"
    >YAM Launcher is not set as your default home app.</string>
    <string name="set_default_launcher_button">Set as Default</string>
    <string name="shortcut_default">Long press to add an app</string>
    <string name="shortcut_default_click">Long click to select an app</string>
    <string name="accessibility_set_shortcut">Set Shortcut App</string>
    <string name="open_app_menu">Open App Menu</string>
    <string name="no_calendar_app">No Calendar app found</string>
    <string name="select_an_app">Select an app</string>
    <string name="search">Search…</string>
    <string name="switch_to_contacts">Switch to Contacts</string>
    <string name="switch_to_apps">Switch to Apps</string>
    <string name="confirm_title">Confirmation</string>
    <string name="app_confirm_text">Are you sure you want to choose</string>
    <string name="confirm_yes">Yes</string>
    <string name="confirm_no">Cancel</string>
    <string name="removing">Removing…</string>
    <string name="close_app_menu">Close App Menu</string>
    <string name="launch_error">Cannot launch app</string>
    <string name="empty_rename">Name cannot be empty</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="info">Info</string>
    <string name="uninstall">Uninstall</string>
    <string name="rename">Rename</string>
    <string name="hide">Hide</string>
    <string name="close">Close</string>
    <string name="accessibility_pin">Pin app</string>
    <string name="accessibility_unpin">Unpin app</string>
    <string name="accessibility_info">App info</string>
    <string name="accessibility_uninstall">Uninstall app</string>
    <string name="accessibility_rename">Rename app</string>
    <string name="accessibility_hide">Hide app</string>
    <string name="rename_error">Unable to start rename mode</string>
    <string name="settings_title">Launcher Settings</string>
    <string name="default_home">Set Default Home</string>
    <string name="unable_to_launch_settings">Unable to launch settings</string>
    <string name="lock_settings">Lock Settings</string>
    <string name="customization">Customization</string>
    <string name="ui_settings_title">General UI Settings</string>
    <string name="ui_settings_text">General UI</string>
    <string name="ui_settings_summary">Configure the overall look</string>
    <string name="appearance">Appearance</string>
    <string name="background_color">Background Color</string>
    <string name="text_color">Text Color</string>
    <string name="text_font">Text Font</string>
    <string name="text_style">Text Style</string>
    <string name="text_shadow">Text Shadow</string>
    <string name="operation">Operation</string>
    <string name="animation_speed">Animation Speed</string>
    <string name="swipe_threshold">Swipe Threshold</string>
    <string name="swipe_velocity_threshold">Swipe Velocity Threshold</string>
    <string name="show_status_bar">Show Status Bar</string>
    <string name="app_drawer_darkening">App Drawer Darkening</string>
    <string name="settings_darkening">Settings Panel Darkening</string>
    <string name="homescreen_darkening">Homescreen Darkening</string>
    <string name="enable_confirmation">App Confirmation Dialog</string>
    <string
        name="launch_confirmation_text"
    >Are you sure you want to launch this app?</string>
    <string name="home_settings_title">Home Screen Settings</string>
    <string name="home_settings_text">Home Screen</string>
    <string name="home_settings_summary">Configure the home screen</string>
    <string name="clock">Clock</string>
    <string name="show_clock">Show Clock</string>
    <string name="clock_alignment">Clock Alignment</string>
    <string name="clock_size">Clock Size</string>
    <string name="clicking_time_opens_clock">Clicking Time Opens Clock</string>
    <string name="custom_clock_gesture">Custom Clock</string>
    <string name="set_clock_app">Set Clock App</string>
    <string name="date">Date</string>
    <string name="show_date">Show Date</string>
    <string name="date_size">Date Size</string>
    <string name="battery_indicator">Battery Indicator</string>
    <string
        name="clicking_date_opens_calendar"
    >Clicking Date Opens Calendar</string>
    <string name="custom_date_gesture">Custom Calendar</string>
    <string name="set_calendar_app">Set Calendar App</string>
    <string name="weather">Weather</string>
    <string name="gps_location">GPS Location</string>
    <string name="latest_location">Latest GPS location</string>
    <string name="set_manual_location">Set Manual Location</string>
    <string name="find_your_city">"Search for Your City"</string>
    <string name="weather_update_interval">Update Interval</string>
    <string
        name="weather_update_interval_summary"
    >e.g., 15m, 6h, 1d (minimum 1m)</string>
    <string name="units">Units</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="number_of_shortcuts">Number of Shortcuts</string>
    <string name="horizontal_alignment">Horizontal Alignment</string>
    <string name="vertical_alignment">Vertical Alignment</string>
    <string name="shortcut_size">Shortcut Size</string>
    <string name="shortcut_spacing">Shortcut Spacing</string>
    <string name="lock_shortcuts">Lock Shortcuts</string>
    <string name="hidden_shortcut_title">Hidden Apps</string>
    <string
        name="hidden_shortcuts"
    >Show Hidden Apps in Shortcut Selection</string>
    <string name="notification_dots">Notification Dots</string>
    <string
        name="notification_dots_summary"
    >Show a dot on shortcuts when apps have notifications</string>
    <string name="notification_permission_required">Permission Required</string>
    <string
        name="notification_permission_text"
    >Enable notification access to show notification dots</string>
    <string name="gestures">Gestures</string>
    <string name="swipe_left">Swipe Left</string>
    <string name="left_swipe_app">Left Swipe App</string>
    <string name="swipe_right">Swipe Right</string>
    <string name="right_swipe_app">Right Swipe App</string>
    <string name="double_tap_to_lock_screen">Double Tap to Lock Screen</string>
    <string name="double_tap">Double Tap</string>
    <string name="double_tap_action">Double Tap Action</string>
    <string name="double_tap_action_lock_screen">Lock Screen</string>
    <string name="double_tap_action_app">Launch App</string>
    <string name="double_tap_app">Double Tap App</string>
    <string name="app_settings_title">App Menu Settings</string>
    <string name="app_settings_text">App Menu</string>
    <string name="app_settings_summary">Configure the application menu</string>
    <string name="apps">Apps</string>
    <string name="app_alignment">App Alignment</string>
    <string name="app_size">App Size</string>
    <string name="app_spacing">App Spacing</string>
    <string name="contacts_menu">Contacts Menu</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="internet_search">Web Search Button</string>
    <string name="alphabet_index_enabled">Alphabet Index</string>
    <string
        name="alphabet_index_summary"
    >Show a letter sidebar for quick navigation</string>
    <string name="alphabet_index_position">Index Position</string>
    <string name="alphabet_index_left">Left</string>
    <string name="alphabet_index_right">Right</string>
    <string name="context_menu_settings_title">Context Menu Settings</string>
    <string name="context_menu_settings_text">Context Menu</string>
    <string
        name="context_menu_settings_summary"
    >Enable/disable context menu items</string>
    <string name="enable_pin">Pin App</string>
    <string name="enable_info">App Info</string>
    <string name="enable_uninstall">Uninstall App</string>
    <string name="enable_rename">Rename App</string>
    <string name="enable_hide">Hide App</string>
    <string name="enable_close">Close Menu</string>
    <string name="search_text">Search</string>
    <string name="enable_search">Enable Search</string>
    <string name="search_alignment">Search Alignment</string>
    <string name="search_size">Search Size</string>
    <string name="enable_fuzzy_search">Fuzzy Search</string>
    <string
        name="automatically_open_keyboard"
    >Automatically Open Keyboard</string>
    <string name="automatic_app_opening">Automatic App Opening</string>
    <string
        name="auto_launch_summary"
    >Automatically launch an app when it\'s the last search result</string>
    <string
        name="auto_launch_disabled_reason_web_search"
    >Disabled because Web Search Button is enabled.</string>
    <string
        name="web_search_disabled_reason_auto_open"
    >Disabled because Automatic App Opening is enabled.</string>
    <string name="hidden_apps_title">Hidden Apps</string>
    <string name="hidden_apps_text">Manage Hidden Apps</string>
    <string name="hidden_apps_summary">Unhide Apps</string>
    <string name="hidden_confirm_text">Are you sure you want to unhide</string>
    <string name="about">About</string>
    <string name="about_title">About YAM Launcher</string>
    <string name="app_icon">App Icon</string>
    <string
        name="creditName"
    >created by Otto, maintained by Thomas Boom</string>
    <string name="source_code">Source Code</string>
    <string name="codeberg">Codeberg</string>
    <string name="github">GitHub</string>
    <string name="view_github">View this project on GitHub</string>
    <string name="install_fdroid">Install on F-Droid</string>
    <string name="install_izzy">Install on IzzyOnDroid</string>
    <string name="install_play">Install on Google Play</string>
    <string name="reset">Reset</string>
    <string name="restart_text">Restart YAM Launcher</string>
    <string name="reset_text">Reset All Settings</string>
    <string
        name="reset_confirm_text"
    >You will lose ALL changes that you have made to the launcher settings, shortcuts, hidden apps, etc.\n\nAre you sure?</string>
    <string name="backup_restore">Backup and Restore</string>
    <string name="backup">Backup</string>
    <string name="backup_summary">Backup your settings</string>
    <string name="restore">Restore</string>
    <string name="restore_summary">Restore a backup</string>
    <string name="backup_success">Backup successful :)</string>
    <string name="backup_fail">Backup failed :(</string>
    <string name="restore_success">Restore successful :)</string>
    <string name="restore_fail">Restore failed :( (corrupt file?)</string>
    <string name="restore_wrong_app">Not a YAM Launcher backup</string>
    <string name="restore_error">Failed to read file</string>
    <string name="debug_logs">Debug Logs</string>
    <string name="export_logs">Export Logs</string>
    <string
        name="export_logs_summary"
    >Share logs to help diagnose issues</string>
    <string name="clear_logs">Clear Logs</string>
    <string name="clear_logs_summary">Delete all stored log files</string>
    <string name="logs_cleared">Logs cleared</string>
    <string name="logs_export_success">Logs exported successfully</string>
    <string name="logs_export_fail">Failed to export logs</string>
    <string name="no_logs_to_export">No logs to export</string>
    <string name="region_text">%1$s%2$s</string>
    <string
        name="screenlock_confirmation"
    >To lock with double tap, enable YAM Launcher in accessibility settings.</string>
    <string
        name="accessibility_service_description"
    >The permission is required for double tap to work for locking the screen.\n\nIt is only needed if you want to use the double tap to lock screen feature in YAM Launcher.</string>
    <string name="text_authentication_cancel">Authentication Cancel.</string>
</resources>